fixed overflow issue

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -94,6 +94,7 @@ a:hover, a:focus { text-decoration: none }
   display: flex;
   flex-direction: column;
   flex: 1;
+  min-height: 1px;
 }
 .movie-card__favs {
   position: absolute;
